--- a/_config.yml
+++ b/_config.yml
@@ -113,9 +113,9 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "Roel Raike"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
+  bio              : "This is a work in progress."
   location         : "Somewhere"
   email            :
   links:
