--- a/_config.yml
+++ b/_config.yml
@@ -318,7 +318,7 @@ defaults:
       path: ""
       type: posts
     values:
-      layout: single
+      layout: home
       author_profile: true
       read_time: true
       comments: # true
