--- a/_config.yml
+++ b/_config.yml
@@ -318,7 +318,7 @@ defaults:
       path: ""
       type: pages
     values:
-      layout: home
+      layout: splash
       author_profile: False
       read_time: true
       comments: # true
