--- a/_config.yml
+++ b/_config.yml
@@ -115,7 +115,7 @@ analytics:
 # Site Author
 author:
   name             : "Roel Raike"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : /assets/Images/Profile/ProfilePicture.png # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "This is a work in progress."
   location         : "Somewhere"
   email            :
