--- a/_config.yml
+++ b/_config.yml
@@ -122,7 +122,7 @@ author:
   links:
     - label: "LinkedIn"
       icon: "fa-brands fa-linkedin"
-      url: "www.linkedin.com/in/roelraike"
+      url: "https://www.linkedin.com/in/roelraike"
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
       # url: "mailto:your.name@email.com"
