--- a/_config.yml
+++ b/_config.yml
@@ -317,9 +317,9 @@ compress_html:
 
 # Defaults
 defaults:
-  # _posts
+  # pages
   - scope:
-      path: ""
+      path: "_pages"
       type: pages
     values:
       layout: single
