--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ subtitle                 : Website under Construction # site tagline that appear
 name                     : "Roel Raike"
 description              : #"An amazing website."
 url                      : https://rraike.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : /RRaike # the subpath of your site, e.g. "/blog"
-repository               : RRaike/RRaike # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+baseurl                  : # the subpath of your site, e.g. "/blog"
+repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
