--- a/_config.yml
+++ b/_config.yml
@@ -116,7 +116,7 @@ analytics:
 author:
   name             : "Roel Raike"
   avatar           : /assets/Images/Profile/ProfilePicture.jpg # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Assistant-doctorant in LCMD @EPFL <br> Science Enthousiast <br> Coffee addict"
+  bio              : "Assistant-doctorant in LCMD @EPFL <br> Science enthousiast <br> Coffee addict"
   location         : Lausanne, Switzerland
   email            :
   links:
